--- a/webapp/front/front/src/app/features/unverified/unverified-page/unverified-page.component.html
+++ b/webapp/front/front/src/app/features/unverified/unverified-page/unverified-page.component.html
@@ -1,22 +1,29 @@
 <app-background-drawing></app-background-drawing>
 <div class="container">
-    <div class="d-flex flex-column justify-content-center align-items-center">
-        <div class="cool-static-container" style="width: 500px; margin-top: 100px">
-            <div class="d-flex flex-column justify-content-center align-items-center" style="text-align: center">
-                <!-- Big heading -->
-                <p style="color: var(--primary); font-size: 30px" i18n>Hello, you're one step away from becoming a
-                    neighbor!</p>
-                <br />
-                <p i18n>We've already sent your request to the administration,</p>
-                <br />
-                <p i18n>we are configuring your account to provide you with the best experience.</p>
-                <br />
-                <p i18n>We will notify you when your account is ready.</p>
-                <br />
-                <button class="cool-button m-t-40" (click)="goBackToMainPage()" i18n>
-                    GoBackToMainPage
-                </button>
-            </div>
-        </div>
+  <div class="d-flex flex-column justify-content-center align-items-center">
+    <div class="cool-static-container" style="width: 500px; margin-top: 100px">
+      <div
+        class="d-flex flex-column justify-content-center align-items-center"
+        style="text-align: center"
+      >
+        <!-- Big heading -->
+        <p style="color: var(--primary); font-size: 30px" i18n>
+          Hello, you're one step away from becoming a neighbor!
+        </p>
+        <br />
+        <p i18n>We've already sent your request to the administration,</p>
+        <br />
+        <p i18n>
+          we are configuring your account to provide you with the best
+          experience.
+        </p>
+        <br />
+        <p i18n>We will notify you when your account is ready.</p>
+        <br />
+        <button class="cool-button m-t-40" (click)="goBackToMainPage()" i18n>
+          Go back to login
+        </button>
+      </div>
     </div>
+  </div>
 </div>
