--- a/webapp/front/front/src/app/features/amenities/amenities-reservations-list/amenities-reservations-list.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-reservations-list/amenities-reservations-list.component.html
@@ -49,7 +49,7 @@
             <a
               id="delete-reservation"
               class="pointer"
-              (click)="deleteReservation(reservation.self)"
+              (click)="deleteReservation(reservation)"
             >
               <i class="fas fa-trash" style="color: var(--error)"></i>
             </a>
