--- a/webapp/front/front/src/app/features/feed/feed-control-bar/feed-control-bar.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-control-bar/feed-control-bar.component.html
@@ -1,4 +1,3 @@
-<!--<c:if test="${channel != 'Announcements'}">-->
 <div class="upper-feed-buttons-box">
   <div class="f-r-s-c filters g-05">
     <a
@@ -31,13 +30,7 @@
     </a>
   </div>
 
-  <div
-    *ngIf="
-      currentUser &&
-      currentUser.userRole !== 'ADMINISTRATOR' &&
-      channelClass !== 'Announcements'
-    "
-  >
+  <div *ngIf="currentUser && isNotAdmin && channelClass !== 'Announcements'">
     <button (click)="publishInChannel()" class="cool-feed-button">
       <i class="fa-solid fa-plus"></i>
 
@@ -48,20 +41,4 @@
       </ng-container>
     </button>
   </div>
-
-  <!--<c:if test='${loggedUser.role != "ADMINISTRATOR"}'>
-      <a onclick="publishInChannel()" class="cool-feed-button p-3 ">
-        <i class="fa-solid fa-plus"></i>
-
-        <c:choose>
-          <c:when test="${channel eq 'Feed'}">
-            <span i18n>Create post</span>
-          </c:when>
-          <c:when test="${channel eq 'Complaints'}">
-            <span i18n>Create complaint</span>
-          </c:when>
-        </c:choose>
-      </a>
-    </c:if>-->
 </div>
-<!--</c:if>-->
