--- a/webapp/front/front/src/app/shared/components/wave-footer/wave-footer.component.html
+++ b/webapp/front/front/src/app/shared/components/wave-footer/wave-footer.component.html
@@ -1,12 +1,36 @@
-  <footer>
-    <svg viewBox="0 0 120 28">
-      <defs>
-        <path id="wave"
-          d="M 0,10 C 30,10 30,15 60,15 90,15 90,10 120,10 150,10 150,15 180,15 210,15 210,10 240,10 v 28 h -240 z">
-        </path>
-      </defs>
-  
-      <use id="wave3" class="wave-footer" [ngClass]="{'lila': isMarketplace}" href="#wave" x="0" y="-2"></use>
-      <use id="wave2" class="wave-footer" [ngClass]="{'lila': isMarketplace}" href="#wave" x="0" y="0"></use>
-    </svg>
-  </footer>
+<footer>
+  <svg viewBox="0 0 120 28">
+    <defs>
+      <path
+        id="wave"
+        d="M 0,10 C 30,10 30,15 60,15 90,15 90,10 120,10 150,10 150,15 180,15 210,15 210,10 240,10 v 28 h -240 z"
+      ></path>
+    </defs>
+
+    <use
+      id="wave3"
+      class="wave-footer"
+      [ngClass]="{ lila: isMarketplace }"
+      href="#wave"
+      x="0"
+      y="-2"
+    ></use>
+    <use
+      id="wave2"
+      class="wave-footer"
+      [ngClass]="{ lila: isMarketplace }"
+      href="#wave"
+      x="0"
+      y="0"
+    ></use>
+  </svg>
+  <div class="" style="height: 2em">
+    <span
+      class="h-100 container f-r-sb-c w-80 p-2"
+      style="color: var(--background) font-size-12"
+    >
+      <p>Your peace of mind is our priority. Safe, secure, and serene.</p>
+      <p>Contact us: +54 911 2328-6639 | info&#64;neibo.com</p>
+    </span>
+  </div>
+</footer>
